Upgrade: Criação --ParentFragment Perfil da Empresa (que contém os Fragments Serviços, Promoções e Informações. Update em layouts.

--- a/CharmeX_v03/app/src/main/AndroidManifest.xml
+++ b/CharmeX_v03/app/src/main/AndroidManifest.xml
@@ -26,4 +26,7 @@
         <activity android:name=".home.TelaPrincipal"></activity>
     </application>
 
+    <!--  Internet Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
